Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
         <!-- Home Section -->
         <section id="home-section" class="active">
             <div class="hero">
-                <h1>MASTRSCAN</h1>
+                <h1>MASTERSCAN</h1>
                 <p>Submit requests, track real-time status, and manage approvals efficiently. A powerful system built
                     for transparency and speed.</p>
                 <button class="cta-btn"
@@ -1010,5 +1010,6 @@
         });
     </script>
 </body>
+
 
 </html>
