--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@
                 <form id="request-form">
                     <div class="form-group">
                         <label class="form-label">Full Name</label>
-                        <input type="text" name="name" class="form-input" required placeholder="Ex. John Doe">
+                        <input type="text" name="name" class="form-input" required placeholder="Ex. Name">
                     </div>
                     <div class="form-group">
                         <label class="form-label">Purpose</label>
-                        <textarea name="purpose" class="form-input" required placeholder="Ex. Project Funding" rows="4"
+                        <textarea name="purpose" class="form-input" required placeholder="Ex. Purpose" rows="4"
                             style="resize: vertical;"></textarea>
                     </div>
                     <div class="form-group">
